--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js binding for the ssdeep CTPH library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/memcorrupt/fast-ssdeep/issues"
   },
-  "homepage": "https://github.com/memcorrupt/fast-ssdeep#readme"
+  "homepage": "https://github.com/memcorrupt/fast-ssdeep#readme",
+  "devDependencies": {
+    "mocha": "^10.4.0"
+  }
 }
